Migrate to src layout and enforce absolute imports, bump to v1.1.0
- Move source code from openconvert/ to src/openconvert/
- Update all relative imports to absolute imports:
  - from .client -> from openconvert.client
  - from .openconvert_cli -> from openconvert.openconvert_cli
- Update version from 1.0.0 to 1.1.0 in __init__.py
- Update setup.py and pyproject.toml for src layout:
  - package_dir={'': 'src'}
  - packages=find_packages(where='src')
  - Updated version path resolution
- Update MANIFEST.in to include src directory
- Add mypy and pytest path configuration for src layout
- Verify package builds and passes twine check

Benefits of src layout:
- Prevents accidental imports from development directory
- Cleaner separation of source code from other files
- Better test isolation and import behavior
- Industry standard for Python packaging

Package structure now:
src/
  openconvert/
    __init__.py (v1.1.0)
    __main__.py
    client.py
    openconvert_cli.py

All imports now use absolute package names consistently.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,9 @@ include .readthedocs.yaml
 # Include scripts
 recursive-include scripts *.py *.sh *.md
 
+# Include source code (src layout)
+recursive-include src *.py
+
 # Exclude unnecessary files
 global-exclude *.pyc
 global-exclude __pycache__
